# drg-completionist

./: .babelrc  .eslintignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc.js  LICENSE  README.md  craco.config.js  gatsby-browser.jsx  gatsby-browser.tsx  gatsby-config.ts  gatsby-node.ts  gatsby-ssr.tsx  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  prettierignore  schema.gql  tsconfig.json
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml
data/: common-weapon-paint-jobs.json  miners.json  overclock-types.json  pickaxe-paint-jobs.json  pickaxe-part-sets.json  pickaxe-parts.json  weapon-frameworks.json  weapon-paint-jobs.json
drg-save-parser/: Cargo.toml
drg-save-parser/pkg/: drg_save_parser.js  drg_save_parser_bg.js  drg_save_parser_bg.wasm  drg_save_parser_bg.wasm.d.ts  package.json
drg-save-parser/src/: guids.json  lib.rs
public/: index.html  manifest.json
save-parser/: Cargo.toml
save-parser/pkg/: package.json  save_parser.js  save_parser_bg.js  save_parser_bg.wasm
save-parser/src/: lib.rs
save-parser/src/properties/: array_property.rs  bool_property.rs  enum_property.rs  float_property.rs  guid_property.rs  int_property.rs  map_property.rs  mod.rs  object_property.rs  set_property.rs  string_property.rs  struct_property.rs
save-parser/src/utils/: error.rs  guid.rs  mod.rs  peek.rs  read_guid.rs  read_string.rs
scripts/: generateAssetWrappers.sh  generate_asset_wrappers.sh
src/: AnimatedSwitch.tsx  App.tsx  PreloadRoutes.tsx  Routes.tsx  index.css  index.tsx  service-worker.ts  (+3 more)
(+310 files in other folders)
