[package]
authors = ["Robert Lynch <robertlynch2012@gmail.com>"]
edition = "2018"
name = "save-parser"
version = "0.1.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1"
callback-future = "0.1"
fragile = "1.0.0"
hex = "0.4.2"
js-sys = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.20"

[dependencies.web-sys]
features = [
  "File",
  "FileReader",
  "ProgressEvent",
  "EventTarget",
]
version = "0.3.22"
